# seekablehttpfile

./: .vars.ini  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: build.yml
seekablehttpfile/: __init__.py  core.py
seekablehttpfile/tests/: __init__.py  __main__.py  core.py  live.py
