[metadata]
name = seekablehttpfile
description = A lazy-loading, seekable, remote file object using http range requests
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/thatch/seekablehttpfile/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = seekablehttpfile
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.8
include_package_data = true

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = seekablehttpfile/*
omit = seekablehttpfile/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py38, py39, py310, py311, py312

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{38,39,310,311,312}: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
